[package]
name = "maligog"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"
description = "A wrapper for Vulkan API"
license = "MIT"
repository = "https://github.com/evopen/maligog"
keywords = ["vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
ash-window = "0.6.0"
num-traits = "0.2.14"
strum = "0.20.0"
strum_macros = "0.20.1"
gpu-allocator = "0.7.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.8.3"