[package]
name = "maligog"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"
description = "A wrapper for Vulkan API"
license = "MIT"
repository = "https://github.com/evopen/maligog"
keywords = ["vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { git = "https://github.com/MaikKlein/ash.git", rev = "9d6bf63b4e37f768b7cee85f9d82f4ac77b1fe22" }
ash-window = { git = "https://github.com/MaikKlein/ash.git", rev = "9d6bf63b4e37f768b7cee85f9d82f4ac77b1fe22" }
num-traits = "0.2.14"
strum = "0.20.0"
strum_macros = "0.20.1"
gpu-allocator = { git = "https://github.com/evopen/gpu-allocator.git", branch = "main" }
log = "0.4.14"
thread_local = "1.1.3"
bytemuck = "1.5.1"
raw-window-handle = "0.3.3"
cfg-if = "1.0.0"
anyhow = "1.0"
glam = "0.16"
dyn-clone = "1.0.4"

[dev-dependencies]
env_logger = "0.8.3"
winit = "0.25"
maplit = "1.0"
dotenv = "0.15"
gltf = "0.16"
rayon = "1.5.1"
rpmalloc = "0.2.0"
bytemuck = "1.5"
maligog-gltf = { path = "../maligog-gltf" }

[dev-dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "c3eff4d4a5a52607aa3bc8b4ba8409f6659425ee"
features = ["use-installed-tools"]
default-features = false

[profile.dev.package.spirv-builder]
opt-level = 3
