[package]
name = "maligog"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"
description = "A wrapper for Vulkan API"
license = "MIT"
repository = "https://github.com/evopen/maligog"
keywords = ["vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { git = "https://github.com/MaikKlein/ash.git", rev = "a75d8e7e889bd75ac08f226539c04c7848823fcc" }
ash-window = { git = "https://github.com/MaikKlein/ash.git", rev = "a75d8e7e889bd75ac08f226539c04c7848823fcc" }
num-traits = "0.2.14"
strum = "0.21.0"
strum_macros = "0.21.0"
gpu-allocator = { git = "https://github.com/evopen/gpu-allocator.git", rev = "aee7083f30b4752dff312665be3e9a1d023c6c86" }
log = "0.4.14"
thread_local = "1.1.3"
bytemuck = "1.5.1"
raw-window-handle = "0.3.3"
cfg-if = "1.0.0"
anyhow = "1.0"
glam = "0.16"
dyn-clone = "1.0.4"

[dev-dependencies]
env_logger = "0.8.3"
winit = "0.25"
maplit = "1.0"
dotenv = "0.15"
gltf = "0.16"
rayon = "1.5.1"
rpmalloc = "0.2.0"
bytemuck = "1.5"
maligog-gltf = { path = "../maligog-gltf" }

[dev-dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "8924fe7b4cc552cf764819a028d6c23ad983b3db"
features = ["use-installed-tools"]
default-features = false

[profile.dev.package.spirv-builder]
opt-level = 3
